# HyperBotMain

./: .env.example  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
hyperbot/: __init__.py
hyperbot/core/: config.py  logging.py  retry.py  runtime.py
hyperbot/dashboard/: app.py
hyperbot/dashboard/templates/: dashboard.html
hyperbot/engine/: __init__.py  runtime.py
hyperbot/exchange/: base.py  errors.py  event_bus.py  hyperliquid.py  manager.py  websocket.py  websocket_manager.py  ws_manager.py
hyperbot/execution/: __init__.py  manager.py
hyperbot/models/: __init__.py  account.py
hyperbot/risk/: engine.py
hyperbot/storage/: __init__.py  repository.py  sqlite.py
hyperbot/strategy/: __init__.py  base.py  smart_dense_grid.py
hyperbot/utils/: async_utils.py
tests/: test_event_bus.py  test_hyperliquid_exchange.py  test_infra.py  test_order_engine.py  test_persistence.py  test_runtime_and_risk.py  test_smart_grid.py  test_websocket_real.py  test_ws_manager.py
